--- a/index.html
+++ b/index.html
@@ -1,157 +1,141 @@
-<!DOCTYPE html><html lang="ru">
+<!DOCTYPE html>
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CPS Tester</title>
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     html, body {
       margin: 0;
-      overflow: hidden;
-      touch-action: manipulation;
-      font-family: 'Segoe UI', sans-serif;
-    }:root {
-  --bg-dark: linear-gradient(to right, #1f1c2c, #928dab);
-  --bg-light: linear-gradient(to right, #f0f0f0, #dcdcdc);
-  --text-dark: white;
-  --text-light: #222;
-  --primary-dark: #e74c3c;
-  --primary-light: #3498db;
-}
+      padding: 0;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      background-color: #f2f2f7;
+      color: #000;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
 
-body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  min-height: 100vh;
-  padding: 20px;
-  background: var(--bg-dark);
-  color: var(--text-dark);
-  transition: background 0.5s, color 0.5s;
-}
+    .container {
+      width: 90%;
+      max-width: 400px;
+      background-color: #fff;
+      border-radius: 28px;
+      padding: 24px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+      text-align: center;
+    }
 
-body.light {
-  background: var(--bg-light);
-  color: var(--text-light);
-}
+    .top-bar {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      display: flex;
+      gap: 10px;
+    }
 
-.container {
-  background: rgba(255, 255, 255, 0.1);
-  border-radius: 20px;
-  padding: 30px;
-  max-width: 400px;
-  width: 100%;
-  text-align: center;
-  box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
-  transition: background 0.5s;
-}
+    .top-bar button, #topBtn {
+      background-color: #e5e5ea;
+      border: none;
+      border-radius: 20px;
+      padding: 8px 16px;
+      font-size: 14px;
+      cursor: pointer;
+    }
 
-body.light .container {
-  background: rgba(255, 255, 255, 0.8);
-}
+    #topBtn {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+    }
 
-h1 {
-  margin-bottom: 10px;
-}
+    h1 {
+      margin-bottom: 10px;
+      font-size: 24px;
+      font-weight: 600;
+    }
 
-#timer {
-  font-size: 20px;
-  margin: 10px 0;
-}
+    #timer {
+      margin-bottom: 16px;
+      font-size: 16px;
+      color: #555;
+    }
 
-#clickBtn {
-  background-color: var(--primary-dark);
-  color: white;
-  font-size: 24px;
-  padding: 20px 40px;
-  border: none;
-  border-radius: 15px;
-  cursor: pointer;
-  margin-top: 20px;
-  transition: background 0.3s;
-  user-select: none;
-}
+    #clickBtn {
+      background-color: #007aff;
+      color: white;
+      font-size: 20px;
+      padding: 16px;
+      width: 100%;
+      border: none;
+      border-radius: 16px;
+      margin: 16px 0;
+      transition: background-color 0.3s;
+    }
 
-body.light #clickBtn {
-  background-color: var(--primary-light);
-}
+    #clickBtn:disabled {
+      background-color: #ccc;
+    }
 
-#clickBtn:hover {
-  filter: brightness(90%);
-}
+    #clickBtn:hover:not(:disabled) {
+      background-color: #0051d4;
+    }
 
-.switcher, .share-section {
-  margin-top: 20px;
-  display: flex;
-  justify-content: center;
-  gap: 10px;
-  flex-wrap: wrap;
-}
+    #startBtn, #shareBtn {
+      background-color: #34c759;
+      color: white;
+      font-size: 16px;
+      padding: 12px;
+      border: none;
+      border-radius: 16px;
+      width: 100%;
+      margin-top: 10px;
+      transition: background-color 0.3s;
+    }
 
-.switcher input {
-  width: 100px;
-  padding: 10px;
-  font-size: 16px;
-  text-align: center;
-  border-radius: 10px;
-  border: 1px solid #ccc;
-}
+    #shareBtn.hidden {
+      display: none;
+    }
 
-#result {
-  margin-top: 20px;
-  font-size: 18px;
-  white-space: pre-line;
-}
+    #score {
+      margin-top: 10px;
+      font-size: 18px;
+      font-weight: 500;
+    }
 
-#startBtn, #shareBtn, #topBtn {
-  margin-top: 20px;
-  background-color: #2980b9;
-  border: none;
-  color: white;
-  font-size: 18px;
-  padding: 12px 24px;
-  border-radius: 10px;
-  cursor: pointer;
-}
+    #result {
+      margin-top: 16px;
+      white-space: pre-line;
+      font-size: 16px;
+    }
 
-body.light #startBtn, body.light #shareBtn, body.light #topBtn {
-  background-color: #2471a3;
-}
+    .switcher {
+      margin-top: 16px;
+    }
 
-#startBtn:hover, #shareBtn:hover, #topBtn:hover {
-  filter: brightness(90%);
-}
-
-.top-bar {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  display: flex;
-  gap: 10px;
-}
-
-.toggle {
-  background: rgba(255, 255, 255, 0.2);
-  border: none;
-  padding: 8px 14px;
-  border-radius: 20px;
-  cursor: pointer;
-  color: inherit;
-  font-size: 14px;
-  transition: background 0.3s;
-}
-
-.toggle:hover {
-  background: rgba(255, 255, 255, 0.4);
-}
-
+    .switcher input {
+      width: 100%;
+      padding: 10px;
+      font-size: 16px;
+      border-radius: 12px;
+      border: 1px solid #ccc;
+      text-align: center;
+    }
   </style>
 </head>
 <body>
   <div class="top-bar">
-    <button class="toggle" id="themeToggle">Светлая тема</button>
-    <button class="toggle" id="langToggle">English</button>
-  </div>  <div class="container">
+    <button id="themeToggle">Тема</button>
+    <button id="langToggle">Язык</button>
+  </div>
+  <button id="topBtn">Топ 10</button>
+  <div class="container">
     <h1 id="title">Тест на CPS</h1>
     <p id="timer">Выбери время и нажми "Начать"</p>
     <button id="clickBtn" disabled>КЛИКАЙ!</button>
@@ -161,17 +145,15 @@ body.light #startBtn, body.light #shareBtn, body.light #topBtn {
     <div class="switcher">
       <input type="number" id="timeInput" min="1" max="60" value="5" />
     </div>
-    <div class="share-section">
-      <button id="shareBtn">Поделиться</button>
-      <button id="topBtn">Топ 10</button>
-    </div>
-  </div>  <script src="https://telegram.org/js/telegram-web-app.js"></script>  <script>
+    <button id="shareBtn" class="hidden">Поделиться</button>
+  </div>
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <script>
     let score = 0;
     let selectedTime = 5;
     let timer;
     let timeLeft;
     let language = localStorage.getItem('cps-lang') || 'ru';
-    let isDark = localStorage.getItem('cps-theme') !== 'light';
 
     const texts = {
       ru: {
@@ -182,12 +164,11 @@ body.light #startBtn, body.light #shareBtn, body.light #topBtn {
         click: "КЛИКАЙ!",
         cps: "Твой CPS",
         result: "Ты сделал {score} кликов за {time} сек.\nCPS: {cps}",
-        light: "Светлая тема",
-        dark: "Тёмная тема",
-        eng: "English",
-        rus: "Русский",
+        theme: "Тема",
+        lang: "Язык",
         share: "Поделиться",
-        top: "Топ 10"
+        top: "Топ 10",
+        invalid: "Введите число от 1 до 60 сек."
       },
       en: {
         title: "CPS Test",
@@ -197,14 +178,15 @@ body.light #startBtn, body.light #shareBtn, body.light #topBtn {
         click: "CLICK!",
         cps: "Your CPS",
         result: "You made {score} clicks in {time} sec.\nCPS: {cps}",
-        light: "Light Theme",
-        dark: "Dark Theme",
-        eng: "English",
-        rus: "Русский",
+        theme: "Theme",
+        lang: "Language",
         share: "Share",
-        top: "Top 10"
+        top: "Top 10",
+        invalid: "Please enter a number from 1 to 60 sec."
       }
     };
+
+    const getText = key => texts[language][key];
 
     const timerDisplay = document.getElementById('timer');
     const clickBtn = document.getElementById('clickBtn');
@@ -219,72 +201,75 @@ body.light #startBtn, body.light #shareBtn, body.light #topBtn {
     const topBtn = document.getElementById('topBtn');
 
     function setTexts() {
-      const t = texts[language];
-      title.textContent = t.title;
-      timerDisplay.textContent = t.choose;
-      clickBtn.textContent = t.click;
-      startBtn.textContent = t.start;
-      scoreDisplay.textContent = `${t.clicks}: 0`;
-      themeToggle.textContent = isDark ? t.light : t.dark;
-      langToggle.textContent = language === 'ru' ? t.eng : t.rus;
-      shareBtn.textContent = t.share;
-      topBtn.textContent = t.top;
+      title.textContent = getText('title');
+      timerDisplay.textContent = getText('choose');
+      clickBtn.textContent = getText('click');
+      startBtn.textContent = getText('start');
+      scoreDisplay.textContent = `${getText('clicks')}: 0`;
+      themeToggle.textContent = getText('theme');
+      langToggle.textContent = getText('lang');
+      shareBtn.textContent = getText('share');
+      topBtn.textContent = getText('top');
     }
 
-    function saveSettings() {
-      localStorage.setItem('cps-lang', language);
-      localStorage.setItem('cps-theme', isDark ? 'dark' : 'light');
-    }
+    function startTest() {
+      const inputValue = parseInt(timeInput.value);
+      if (isNaN(inputValue) || inputValue < 1 || inputValue > 60) {
+        Telegram.WebApp.showPopup({
+          title: 'Ошибка',
+          message: getText('invalid'),
+          buttons: [{ id: 'ok', type: 'default', text: 'OK' }]
+        });
+        return;
+      }
 
-    clickBtn.addEventListener('click', () => {
-      score++;
-      scoreDisplay.textContent = `${texts[language].clicks}: ${score}`;
-    });
-
-    startBtn.addEventListener('click', () => {
-      selectedTime = Math.min(60, Math.max(1, parseInt(timeInput.value) || 1));
+      selectedTime = inputValue;
       timeLeft = selectedTime;
       score = 0;
       clickBtn.disabled = false;
       startBtn.disabled = true;
-      scoreDisplay.textContent = `${texts[language].clicks}: 0`;
+      scoreDisplay.textContent = `${getText('clicks')}: 0`;
       resultDisplay.textContent = '';
-      timerDisplay.textContent = `${texts[language].choose} (${timeLeft}s)`;
+      shareBtn.classList.add('hidden');
+      timerDisplay.textContent = `${getText('choose')} (${timeLeft}s)`;
 
       timer = setInterval(() => {
         timeLeft--;
-        timerDisplay.textContent = `${texts[language].choose} (${timeLeft}s)`;
-
+        timerDisplay.textContent = `${getText('choose')} (${timeLeft}s)`;
         if (timeLeft <= 0) {
           clearInterval(timer);
           clickBtn.disabled = true;
           startBtn.disabled = false;
           const cps = (score / selectedTime).toFixed(3);
-          resultDisplay.textContent = texts[language].result
+          resultDisplay.textContent = getText('result')
             .replace('{score}', score)
             .replace('{time}', selectedTime)
             .replace('{cps}', cps);
+          shareBtn.classList.remove('hidden');
 
           Telegram.WebApp.showPopup({
-            title: texts[language].cps,
+            title: getText('cps'),
             message: resultDisplay.textContent,
             buttons: [{ id: 'ok', type: 'default', text: 'OK' }]
           });
         }
       }, 1000);
+    }
+
+    clickBtn.addEventListener('click', () => {
+      score++;
+      scoreDisplay.textContent = `${getText('clicks')}: ${score}`;
     });
 
+    startBtn.addEventListener('click', startTest);
+
     themeToggle.addEventListener('click', () => {
-      document.body.classList.toggle('light');
-      isDark = !isDark;
-      setTexts();
-      saveSettings();
+      document.body.classList.toggle('dark');
     });
 
     langToggle.addEventListener('click', () => {
       language = language === 'ru' ? 'en' : 'ru';
       setTexts();
-      saveSettings();
     });
 
     shareBtn.addEventListener('click', () => {
@@ -296,9 +281,9 @@ body.light #startBtn, body.light #shareBtn, body.light #topBtn {
       Telegram.WebApp.openTelegramLink('https://t.me/TestCpsRobot/Top10');
     });
 
-    if (!isDark) document.body.classList.add('light');
     Telegram.WebApp.ready();
     Telegram.WebApp.expand();
     setTexts();
-  </script></body>
+  </script>
+</body>
 </html>
