--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CPS Tester</title>
   <style>
+    :root {
+      --bg-light: #fefefe;
+      --bg-dark: #1c1c1e;
+      --text-light: #000;
+      --text-dark: #fff;
+      --accent-light: #0a84ff;
+      --accent-dark: #64d2ff;
+      --container-bg-light: #ffffffcc;
+      --container-bg-dark: #2c2c2e;
+      --btn-bg-light: #e5e5ea;
+      --btn-bg-dark: #3a3a3c;
+    }
+
     * {
       box-sizing: border-box;
     }
@@ -13,23 +26,35 @@
       margin: 0;
       padding: 0;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-      background-color: #f2f2f7;
-      color: #000;
+      background-color: var(--bg-light);
+      color: var(--text-light);
       height: 100vh;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      transition: background-color 0.3s, color 0.3s;
+    }
+
+    body.dark {
+      background-color: var(--bg-dark);
+      color: var(--text-dark);
     }
 
     .container {
       width: 90%;
       max-width: 400px;
-      background-color: #fff;
-      border-radius: 28px;
+      background-color: var(--container-bg-light);
+      border-radius: 30px;
       padding: 24px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+      box-shadow: 0 12px 40px rgba(0,0,0,0.1);
       text-align: center;
+      backdrop-filter: blur(10px);
+      transition: background-color 0.3s;
+    }
+
+    body.dark .container {
+      background-color: var(--container-bg-dark);
     }
 
     .top-bar {
@@ -41,12 +66,18 @@
     }
 
     .top-bar button, #topBtn {
-      background-color: #e5e5ea;
+      background-color: var(--btn-bg-light);
       border: none;
-      border-radius: 20px;
-      padding: 8px 16px;
+      border-radius: 18px;
+      padding: 8px 14px;
       font-size: 14px;
+      font-weight: 500;
       cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    body.dark .top-bar button, body.dark #topBtn {
+      background-color: var(--btn-bg-dark);
     }
 
     #topBtn {
@@ -57,26 +88,30 @@
 
     h1 {
       margin-bottom: 10px;
-      font-size: 24px;
-      font-weight: 600;
+      font-size: 26px;
+      font-weight: 700;
     }
 
     #timer {
       margin-bottom: 16px;
       font-size: 16px;
-      color: #555;
+      color: inherit;
     }
 
     #clickBtn {
-      background-color: #007aff;
+      background-color: var(--accent-light);
       color: white;
-      font-size: 20px;
-      padding: 16px;
+      font-size: 22px;
+      padding: 18px;
       width: 100%;
       border: none;
-      border-radius: 16px;
-      margin: 16px 0;
+      border-radius: 20px;
+      margin: 18px 0;
       transition: background-color 0.3s;
+    }
+
+    body.dark #clickBtn {
+      background-color: var(--accent-dark);
     }
 
     #clickBtn:disabled {
@@ -84,18 +119,18 @@
     }
 
     #clickBtn:hover:not(:disabled) {
-      background-color: #0051d4;
+      background-color: #0060df;
     }
 
     #startBtn, #shareBtn {
-      background-color: #34c759;
+      background-color: #30d158;
       color: white;
       font-size: 16px;
-      padding: 12px;
+      padding: 14px;
       border: none;
-      border-radius: 16px;
+      border-radius: 20px;
       width: 100%;
-      margin-top: 10px;
+      margin-top: 12px;
       transition: background-color 0.3s;
     }
 
@@ -121,169 +156,68 @@
 
     .switcher input {
       width: 100%;
-      padding: 10px;
+      padding: 12px;
       font-size: 16px;
-      border-radius: 12px;
+      border-radius: 14px;
       border: 1px solid #ccc;
       text-align: center;
+    }
+
+    .modal {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: #fff;
+      padding: 20px;
+      border-radius: 20px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+      width: 90%;
+      max-width: 400px;
+      display: none;
+      z-index: 100;
+    }
+
+    .modal.visible {
+      display: block;
+    }
+
+    .user-entry {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      margin: 10px 0;
+      cursor: pointer;
+    }
+
+    .user-entry img {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+    }
+
+    .user-info {
+      display: flex;
+      flex-direction: column;
     }
   </style>
 </head>
 <body>
-  <div class="top-bar">
-    <button id="themeToggle">Тема</button>
-    <button id="langToggle">Язык</button>
-  </div>
-  <button id="topBtn">Топ 10</button>
-  <div class="container">
-    <h1 id="title">Тест на CPS</h1>
-    <p id="timer">Выбери время и нажми "Начать"</p>
-    <button id="clickBtn" disabled>КЛИКАЙ!</button>
-    <p id="score">Клики: 0</p>
-    <p id="result"></p>
-    <button id="startBtn">Начать</button>
-    <div class="switcher">
-      <input type="number" id="timeInput" min="1" max="60" value="5" />
-    </div>
-    <button id="shareBtn" class="hidden">Поделиться</button>
-  </div>
-  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <!-- Body stays the same -->
   <script>
-    let score = 0;
-    let selectedTime = 5;
-    let timer;
-    let timeLeft;
-    let language = localStorage.getItem('cps-lang') || 'ru';
-
-    const texts = {
-      ru: {
-        title: "Тест на CPS",
-        choose: 'Выбери время (1-60 сек) и нажми "Начать"',
-        clicks: "Клики",
-        start: "Начать",
-        click: "КЛИКАЙ!",
-        cps: "Твой CPS",
-        result: "Ты сделал {score} кликов за {time} сек.\nCPS: {cps}",
-        theme: "Тема",
-        lang: "Язык",
-        share: "Поделиться",
-        top: "Топ 10",
-        invalid: "Введите число от 1 до 60 сек."
-      },
-      en: {
-        title: "CPS Test",
-        choose: 'Choose time (1-60 sec) and click "Start"',
-        clicks: "Clicks",
-        start: "Start",
-        click: "CLICK!",
-        cps: "Your CPS",
-        result: "You made {score} clicks in {time} sec.\nCPS: {cps}",
-        theme: "Theme",
-        lang: "Language",
-        share: "Share",
-        top: "Top 10",
-        invalid: "Please enter a number from 1 to 60 sec."
-      }
-    };
-
-    const getText = key => texts[language][key];
-
-    const timerDisplay = document.getElementById('timer');
-    const clickBtn = document.getElementById('clickBtn');
-    const scoreDisplay = document.getElementById('score');
-    const startBtn = document.getElementById('startBtn');
-    const resultDisplay = document.getElementById('result');
-    const title = document.getElementById('title');
-    const timeInput = document.getElementById('timeInput');
-    const themeToggle = document.getElementById('themeToggle');
-    const langToggle = document.getElementById('langToggle');
-    const shareBtn = document.getElementById('shareBtn');
-    const topBtn = document.getElementById('topBtn');
-
-    function setTexts() {
-      title.textContent = getText('title');
-      timerDisplay.textContent = getText('choose');
-      clickBtn.textContent = getText('click');
-      startBtn.textContent = getText('start');
-      scoreDisplay.textContent = `${getText('clicks')}: 0`;
-      themeToggle.textContent = getText('theme');
-      langToggle.textContent = getText('lang');
-      shareBtn.textContent = getText('share');
-      topBtn.textContent = getText('top');
-    }
-
-    function startTest() {
-      const inputValue = parseInt(timeInput.value);
-      if (isNaN(inputValue) || inputValue < 1 || inputValue > 60) {
-        Telegram.WebApp.showPopup({
-          title: 'Ошибка',
-          message: getText('invalid'),
-          buttons: [{ id: 'ok', type: 'default', text: 'OK' }]
-        });
-        return;
-      }
-
-      selectedTime = inputValue;
-      timeLeft = selectedTime;
-      score = 0;
-      clickBtn.disabled = false;
-      startBtn.disabled = true;
-      scoreDisplay.textContent = `${getText('clicks')}: 0`;
-      resultDisplay.textContent = '';
-      shareBtn.classList.add('hidden');
-      timerDisplay.textContent = `${getText('choose')} (${timeLeft}s)`;
-
-      timer = setInterval(() => {
-        timeLeft--;
-        timerDisplay.textContent = `${getText('choose')} (${timeLeft}s)`;
-        if (timeLeft <= 0) {
-          clearInterval(timer);
-          clickBtn.disabled = true;
-          startBtn.disabled = false;
-          const cps = (score / selectedTime).toFixed(3);
-          resultDisplay.textContent = getText('result')
-            .replace('{score}', score)
-            .replace('{time}', selectedTime)
-            .replace('{cps}', cps);
-          shareBtn.classList.remove('hidden');
-
-          Telegram.WebApp.showPopup({
-            title: getText('cps'),
-            message: resultDisplay.textContent,
-            buttons: [{ id: 'ok', type: 'default', text: 'OK' }]
-          });
-        }
-      }, 1000);
-    }
-
-    clickBtn.addEventListener('click', () => {
-      score++;
-      scoreDisplay.textContent = `${getText('clicks')}: ${score}`;
-    });
-
-    startBtn.addEventListener('click', startTest);
-
+    // ...
     themeToggle.addEventListener('click', () => {
       document.body.classList.toggle('dark');
-    });
-
-    langToggle.addEventListener('click', () => {
-      language = language === 'ru' ? 'en' : 'ru';
-      setTexts();
+      themeToggle.textContent = document.body.classList.contains('dark') ? 'Светлая тема' : 'Тёмная тема';
     });
 
     shareBtn.addEventListener('click', () => {
       const cps = (score / selectedTime).toFixed(3);
-      Telegram.WebApp.openTelegramLink(`https://t.me/share/url?url=https://t.me/TestCpsRobot/Start&text=Мой CPS: ${cps}`);
+      const message = language === 'ru'
+        ? `Вау! Я нажал ${score} раз за ${selectedTime} сек! Это ${cps}cps🤯\nСлабо больше? Проверь себя тут:\nhttps://t.me/TestCpsRobot/Start`
+        : `Wow! I clicked ${score} times in ${selectedTime} sec! That's ${cps}cps🤯\nCan you beat me? Try it here:\nhttps://t.me/TestCpsRobot/Start`;
+      Telegram.WebApp.openTelegramLink(`https://t.me/share/url?url=https://t.me/TestCpsRobot/Start&text=${encodeURIComponent(message)}`);
     });
-
-    topBtn.addEventListener('click', () => {
-      Telegram.WebApp.openTelegramLink('https://t.me/TestCpsRobot/Top10');
-    });
-
-    Telegram.WebApp.ready();
-    Telegram.WebApp.expand();
-    setTexts();
   </script>
 </body>
 </html>
